# SpeechProcessing

./: README.md  settings.gradle
EasyPermission/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/jh/speechprocessing/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  smbPitchShift.m
app/src/main/java/com/jh/speechprocessing/: AudioProcessor.java  EffectActivity.java  ExecutorServiceTest.java  FileActivity.java  MainActivity.java  StreamActivity.java  VisualizerActivity.java
app/src/main/res/drawable/: button_press_to_bg.xml  button_press_to_pressed_bg.xml
app/src/main/res/layout/: activity_effect.xml  activity_file.xml  activity_main.xml  activity_stream.xml  activity_visualizer.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jh/speechprocessing/: ExampleUnitTest.java
